# epub-stream

./: .analysis.just  .gitignore  .publish.just  .testing.just  .visualize.just  AGENTS.md  Cargo.toml  README.md  audit.md  clippy.toml  justfile
.github/workflows/: ci.yml  publish.yml
benches/: epub_bench.rs
crates/epub-stream-embedded-graphics/: Cargo.toml
crates/epub-stream-embedded-graphics/src/: lib.rs
crates/epub-stream-embedded-graphics/tests/: embedded_reflow_regression.rs
crates/epub-stream-heap-profile/: Cargo.toml
crates/epub-stream-heap-profile/src/: main.rs
crates/epub-stream-render/: Cargo.toml
crates/epub-stream-render-web/: Cargo.toml
crates/epub-stream-render-web/src/: lib.rs
crates/epub-stream-render/src/: lib.rs  persisted.rs  render_engine.rs  render_ir.rs  render_layout.rs
crates/epub-stream-render/tests/: corpus_regression_harness.rs  image_pagination_regression.rs  typography_regression.rs
crates/epub-stream-render/tests/docs/: pagination.rs
crates/mu-epub-embedded-graphics/: Cargo.toml
crates/mu-epub-embedded-graphics/src/: lib.rs
crates/mu-epub-embedded-graphics/tests/: embedded_reflow_regression.rs
crates/mu-epub-render/: Cargo.toml
crates/mu-epub-render-web/: Cargo.toml
crates/mu-epub-render-web/src/: lib.rs
crates/mu-epub-render/src/: lib.rs  render_engine.rs  render_ir.rs  render_layout.rs
crates/mu-epub-render/tests/: corpus_regression_harness.rs  image_pagination_regression.rs  typography_regression.rs
crates/mu-epub-render/tests/docs/: pagination.rs
docs/: PUBLISHING.md  README.md  architecture.md  benchmarks.md  compliance.md  embedded-render-tracker.md  embedded.md  render-api.md  render-migration.md  render.md
docs/guides/: analysis.md  datasets.md  embedded.md  publishing.md
docs/specs/: embedded-render-tracker.md  memory-management.md  render.md  spec-compliance.md
scripts/: analyze_heap.py  lint-memory-patterns.sh  profile_memory.sh
scripts/datasets/: bootstrap.sh  gutenberg_smoke.sh  list_epubs.sh  validate.sh
src/: book.rs  css.rs  error.rs  layout.rs  lib.rs  metadata.rs  navigation.rs  render_prep.rs  spine.rs  streaming.rs  tokenizer.rs  validate.rs  zip.rs
tests/: allocation_tests.rs  budget_full_flow.rs  budget_metadata.rs  budget_render.rs  budget_tokenize.rs  corpus_stress.rs  embedded_mode_tests.rs  firmware_path.rs  frag_epub_open.rs  frag_render.rs  integration.rs  regression.rs  zip_streaming_gutenberg_regression.rs
tests/common/: budget_alloc.rs  fixtures.rs  mod.rs
tools/: analysis.justfile
