[workspace]
members = [
    ".",
    "crates/mu-epub-render",
    "crates/mu-epub-embedded-graphics",
    "crates/mu-epub-render-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Robby Horvath"]
license = "MIT"
repository = "https://github.com/h0rv/mu-epub"

[package]
name = "mu-epub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-efficient EPUB parser for embedded systems"
keywords = ["epub", "ebook", "embedded", "parser", "no_std"]
categories = ["parsing", "embedded", "no-std"]
readme = "README.md"
exclude = ["tests/fixtures/"]

[features]
default = ["std"]
std = ["dep:miniz_oxide", "dep:heapless", "dep:crc32fast", "dep:log"]
layout = []
async = ["std", "dep:tokio"]
cli = ["std"]

[dependencies]
quick-xml = { version = "0.39", default-features = false }
miniz_oxide = { version = "0.9", default-features = false, optional = true }
heapless = { version = "0.9", optional = true }
crc32fast = { version = "1", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
tokio = { version = "1", features = ["fs"], optional = true }

[dev-dependencies]
epub = "2.1.5"
epub-parser = "0.3.4"

[[bench]]
name = "epub_bench"
harness = false

[[bin]]
name = "mu-epub"
path = "src/bin/mu-epub.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
