[workspace]
members = [
    ".",
    "crates/epub-stream-render",
    "crates/epub-stream-embedded-graphics",
    "crates/epub-stream-render-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Robby Horvath"]
license = "MIT"
repository = "https://github.com/h0rv/epub-stream"

[package]
name = "epub-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-efficient EPUB parser for embedded systems"
keywords = ["epub", "ebook", "embedded", "parser", "no_std"]
categories = ["parsing", "embedded", "no-std"]
readme = "README.md"
exclude = ["tests/fixtures/"]

[features]
default = ["std"]
std = ["dep:miniz_oxide", "dep:heapless", "dep:crc32fast", "dep:log"]
layout = []
async = ["std", "dep:tokio"]
cli = ["std"]

[dependencies]
quick-xml = { version = "0.39", default-features = false }
miniz_oxide = { version = "0.9", default-features = false, optional = true }
heapless = { version = "0.9", optional = true }
crc32fast = { version = "1", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
tokio = { version = "1", features = ["fs"], optional = true }

[dev-dependencies]
embedded-graphics = "0.8"
epub_stream_embedded_graphics = { package = "epub-stream-embedded-graphics", version = "0.1.0", path = "crates/epub-stream-embedded-graphics" }
epub_stream_render = { package = "epub-stream-render", version = "0.1.0", path = "crates/epub-stream-render" }

[[bench]]
name = "epub_bench"
harness = false

[[bin]]
name = "epub-stream"
path = "src/bin/epub-stream.rs"
required-features = ["cli"]

[lib]
name = "epub_stream"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
