[package]
name = "epub-stream-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Render IR and layout engine for epub-stream"

[lib]
name = "epub_stream_render"

[dependencies]
epub_stream = { package = "epub-stream", version = "0.1.0", path = "../.." }
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
