[package]
name = "mu-epub-embedded-graphics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "embedded-graphics backend for mu-epub-render"

[features]
default = []
ttf-backend = []

[dependencies]
mu-epub-render = { version = "0.1.0", path = "../mu-epub-render" }
mu_epub = { version = "0.1.0", path = "../.." }
embedded-graphics = "0.8"
