[package]
name = "mu-epub-render-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Web preview backend for mu-epub-render"

[dependencies]
mu_epub = { path = "../.." }
mu-epub-render = { path = "../mu-epub-render" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
