[package]
name = "mu-epub-render-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Web preview backend for mu-epub-render"

[dependencies]
mu-epub = { version = "0.1.0", path = "../.." }
mu-epub-render = { version = "0.1.0", path = "../mu-epub-render" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
