[package]
name = "mu-epub-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Render IR and layout engine for mu-epub"

[dependencies]
mu-epub = { version = "0.1.0", path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
